# Sindi

./: .gitignore  README.md  main.py  requirements.txt  setup.py
.github/workflows/: ci.yml
sindi/: LICENSE  README.md  pyproject.toml  setup.py
sindi/src/sindi/: __init__.py  main.py
sindi/tests/: test_main.py
src/predi/: comparator.py  parser.py  simplifier.py
src/sindi/: __init__.py  ast_rewriter.py  comparator.py  comparator_light.py  diversify_predicates.py  rewriter.py  simplifier.py  tokenizer.py  utils.py
tests/: comparator_test_set.json  simple_test.py  test_cli_light.py  test_comparator_light.py  test_set.json
use-cases/dynamically-mined-invariant-denoising/: RQ1.py  analysis.ipynb  analysis_light.ipynb  erc20.json  erc20_random_sample_kept_after_eval.json  erc20_random_sample_removed_after_eval.json  full_experiment.bash  full_experiment_erc.bash  full_experiment_light_erc.bash  full_experiment_light_sok.bash  group.py  manual_evalution.py  output_data.json  parse_cluster.py  parser.py  random_sample.py  reader copy.py  reader.py  reduce.py  sok.json  sok.txt  sok_random_sample_kept_after_eval.json  sok_random_sample_removed_after_eval.json
use-cases/dynamically-mined-invariant-denoising/output/: erc20.json  sok.json
use-cases/dynamically-mined-invariant-denoising/output_light/: erc20.json  sok.json
use-cases/upgraded-contract-invariant-subsumption-checking/: README.MD  sindi_batch_compare.py
use-cases/upgraded-contract-invariant-subsumption-checking/datasets/: require_statement_updates.json
(+98 files in other folders)
