[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sindi"
version = "0.1.14"
description = "SInDi: Semantic Invariant Differencing for Solidity Smart Contracts"
readme = "README.md"
authors = [{ name = "Mojtaba Eshghie", email = "eshghie@kth.se" }]
license = { text = "MIT" }
homepage = "https://github.com/mojtaba-eshghie/SInDi"
keywords = ["solidity", "smart contracts", "differencing", "semantic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["sindi"]
package-dir = { "" = "src" }

[project.dependencies]
sympy = ">=1.13.0rc2"
colorama = ">=0.4.6"
pyyaml = ">=6.0.1"